# clang

./: CMakeLists.txt  CTU.txt  llvm.patch
lib/AST/: ASTContext.cpp  ASTImporter.cpp  ASTStructuralEquivalence.cpp  CMakeLists.txt  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  Expr.cpp  ItaniumMangle.cpp
lib/Analysis/: AnalysisDeclContext.cpp  CMakeLists.txt
lib/Basic/: SourceManager.cpp
lib/CrossTU/: CrossTranslationUnit.cpp
lib/Frontend/: CompilerInvocation.cpp
lib/Tooling/: CMakeLists.txt  CrossTranslationUnit.cpp
test/: CMakeLists.txt  lit.cfg
test/Analysis/: analyzer-config.c  analyzer-config.cpp  ctu-main.cpp  func-mapping-test.cpp  record-coverage.cpp  record-coverage.cpp.expected  xtu-main.c  xtu-main.cpp  xtu-main_usr.c  xtu-main_usr.cpp
test/Misc/: warning-flags.c
test/Modules/: elaborated-type-specifier-from-hidden-module.m  redefinition-c-tagtypes.m
tools/: CMakeLists.txt  Makefile
tools/clang-cmdline-arch-extractor/: CMakeLists.txt  ClangCmdlineArchExtractor.cpp  Makefile
tools/clang-func-mapping/: CMakeLists.txt  ClangFnMapGen.cpp  Makefile
tools/ctu-analysis/: ctu-analyze.py  ctu-build.py
tools/ctu-ci/: analyze_project.sh  generateStatTable.py  generate_html.sh  get_run_prop_by_name.py  intro.html  massif_stats.py  run_all.sh  strict_mode_saargs.txt  summarizeClangSAStats.py
tools/scan-build/: ccc-analyzer  scan-build  xtu-analyzer-pool.py
tools/xtu-analysis/: xtu-analyze.py  xtu-build.py
tools/xtu-build/: strace_interceptor.py  xtu-analyze.py  (+2 more)
tools/xtu-build-new/: readme.md  xtu-analyze.py  xtu-build-graph.py  xtu-build.py
(+84 files in other folders)
